2006-08-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Follow the gnome toolbar and menu settings.
	Closes #339994

2006-08-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/glade.py:
	Specify the 'pitivi' domain when importing glade files, so i18n can work
	on glade-based widgets.

2006-08-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Close the About dialogbox when the user clicks on the [Close] button.

2006-08-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py: (SmartBin._makeEncThread):
	Insert a videorate before the video encoder in order to cope with
	encoders that don't react well to non-perfect/non-continuous streams.

2006-08-18  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	Remove unwanted print statement
	* pitivi/elements/singledecodebin.py:
	Remove use of fakesink, doesn't seem to break anything.

2006-08-16  Edward Hervey  <edward@fluendo.com>

	* po/.cvsignore:
	* po/Makefile.in.in:
	Forgot to commit Makefile.in.in

2006-08-14  Edward Hervey  <edward@fluendo.com>

	* ABOUT-NLS:
	* intltool-extract.in:
	* intltool-merge.in:
	* intltool-update.in:
	new files
	* Makefile.am:
	Added new files, support for uninstalled locales and build of po/
	* bin/pitivi.in:
	support for i18n
	* configure.ac:
	support for i18n
	* pitivi/ui/mainwindow.py:
	First python file with i18n support (Advanced view)
	* po/LINGUAS:
	Added french
	* po/POTFILES.in:
	Added pitivi/ui/mainwindow.py file
	* po/fr.po:
	new french translation.

2006-08-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Commented out the reporting of Warning messages to the UI.
	If it is really fatal to playback/editing/encoding, it should have been
	an Error message.

2006-08-09  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Added switchToTimeline() method.
	Don't seek to values lower than 0.
	* pitivi/timeline.py:
	Add default sources behaviours in compositions.